--- a/options.html
+++ b/options.html
@@ -2,12 +2,24 @@
 	<head>
 		<title>First Extension</title>
 		<script type="text/javascript" src="jquery-1.11.1.js"></script>
-
-		<!--<script type="text/javascript" src="popup.js"></script>!-->
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
 	</head>
 	<body>
-		<div>
-			<input class="button" type="button" id="hello"/>
+		<div  class="container-fluid">
+			<h2 >All Elements</h2>
+			<div class="row">
+  				<div class="col-xs-12 col-md-12">
+  					<table class="table table-striped">
+						<tbody>
+							<tr>
+								<th>URL</th>
+								<th>Id</th>
+								<th></th>
+							</tr>
+						</tbody>
+					</table>
+				</div>
+			</div>		
 		</div>
 		<script type="text/javascript" src="options.js"></script>
 	</body>
