--- a/popup.html
+++ b/popup.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>First Extension</title>
+		<title>Content Remover</title>
 		<script type="text/javascript" src="jquery-1.11.1.js"></script>
 		<script type="text/javascript" src="popup.js"></script>
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
